# revenuecat_python

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: workflow.yml
revenuecat_client/: __init__.py  client.py  types.py
revenuecat_client/models/: __init__.py  amazon_app.py  amazon_app_amazon.py  amazon_app_create.py  amazon_app_create_amazon.py  app.py  app_create.py  app_create_type.py  app_list.py  app_list_object.py  app_object.py  app_store_app.py  app_store_app_app_store.py  app_store_app_create.py  app_store_app_create_app_store.py  app_type.py  attach_products_to_entitlement_body.py  attach_products_to_package_body.py  country_type_1.py  country_type_2_type_1.py  country_type_3_type_1.py  create_customer_body.py  create_customer_body_attributes_item.py  create_entitlement_body.py  create_offering_body.py  create_packages_body.py  create_product_body.py  currency.py  customer.py  customer_active_entitlement_list.py  customer_active_entitlement_list_object.py  customer_alias.py  customer_alias_list.py  customer_alias_list_object.py  customer_alias_object.py  customer_attribute.py  customer_attribute_list.py  customer_attribute_list_object.py  customer_attribute_object.py  (+159 more)
revenuecat_python/: __init__.py  client.py  constants.py  decorators.py  enums.py  error.py  http_client.py  request.py  responses.py
tests/: __init__.py  test_revenuecat_python.py
(+65 files in other folders)
